# jsonatapy

./: .gitignore  .gitmodules  404.html  BUILD_CHECKLIST.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.MD  CURRENT_STATUS.md  Cargo.toml  EVALUATOR_IMPLEMENTATION.md  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  JSONATA_COMPATIBILITY.md  JSON_API_SUMMARY.md  LICENSE  NEXT_STEPS.md  PARSER_IMPLEMENTATION.md  PERFORMANCE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_FIRST.md  UV_SETUP.md  WSL_SETUP.md  index.html  mkdocs.yml  objects.inv  package-lock.json  pyproject.toml  sitemap.xml  test-suite-report.json  test_array_perf.py  test_conversion.py  test_conversion_overhead.py  test_debug.py  test_debug2.py  test_debug_lambda.py  test_e2e.py  (+8 more)
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SETUP.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  compatibility.yml  config.yml  feature_request.yml
.github/workflows/: README.md  benchmark.yml  docs.yml  lint.yml  release.yml  security.yml  sync-jsonata.yml  test.yml
api/: index.html
benches/: benchmark.py  evaluator_bench.rs
benchmarks/: README.md  benchmark.js  benchmark.py  index.html  package.json  update_docs.py
benchmarks/javascript/: package.json
benchmarks/python/: analyze_results.py  benchmark.py  enhanced_report.py  quick_benchmark.py
benchmarks/rust/: Cargo.toml  jsonata_rs_bench.rs
changelog/: index.html
compatibility/: index.html
credits/: index.html
development/architecture/: index.html
development/building/: index.html
development/contributing/: index.html
development/parser/: index.html
development/testing/: index.html
dist-mac/: jsonatapy-2.1.0-cp310-cp310-macosx_10_12_x86_64.whl  jsonatapy-2.1.0-cp310-cp310-macosx_11_0_arm64.whl  jsonatapy-2.1.0-cp311-cp311-macosx_10_12_x86_64.whl  jsonatapy-2.1.0-cp311-cp311-macosx_11_0_arm64.whl  jsonatapy-2.1.0-cp312-cp312-macosx_10_12_x86_64.whl  jsonatapy-2.1.0-cp312-cp312-macosx_11_0_arm64.whl  jsonatapy-2.1.0-cp313-cp313-macosx_10_12_x86_64.whl  jsonatapy-2.1.0-cp313-cp313-macosx_11_0_arm64.whl  jsonatapy-2.1.0-cp39-cp39-macosx_10_12_x86_64.whl  jsonatapy-2.1.0-cp39-cp39-macosx_11_0_arm64.whl
docs/: PARSER.md  README.md  api.md  benchmarks.md  building.md  changelog.md  compatibility.md  credits.md  error-handling.md  examples.md  index.md  installation.md  jsonata-language.md  license.md  migration-from-js.md  migration-from-jsonata-python.md  optimization-tips.md  performance.md  rust-crate.md  usage.md
docs/development/: architecture.md  building.md  contributing.md  parser.md  testing.md
error-handling/: index.html
examples/: basic_usage.py  evaluator_demo.rs  index.html  parser_demo.rs
installation/: index.html
jsonata-language/: index.html
license/: index.html
migration-from-js/: index.html
migration-from-jsonata-python/: index.html
optimization-tips/: index.html
performance/: index.html
python/jsonatapy/: __init__.py
rust-crate/: index.html
scripts/: setup-uv.sh  verify_parser.bat  verify_parser.sh
search/: search_index.json
src/: ast.rs  compiler.rs  datetime.rs  evaluator.rs  functions.rs  lib.rs  parser.rs  signature.rs  utils.rs  value.rs  vm.rs
src/parser/: README.md
stylesheets/: extra.css
tests/: integration_test.rs
tests/python/: README.md  _test_higher_order.py.disabled  _test_manual.py.disabled  conftest.py  test_basic.py  test_complex.py  test_e2e.py  test_filter_obj.py  test_higher_order.py  test_integration.py  test_json_api.py  test_json_vs_js.py  test_lambda.py  test_manual.py  test_object.py  test_perf.py  test_reference_suite.py  test_simple_mapping.py  test_trace.py
usage/: index.html
