[package]
name = "jsonatapy"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance Python implementation of JSONata query and transformation language"
license = "MIT"
repository = "https://github.com/yourusername/jsonatapy"
homepage = "https://github.com/yourusername/jsonatapy"
documentation = "https://docs.rs/jsonatapy"
keywords = ["jsonata", "json", "query", "transform", "python"]
categories = ["parsing", "data-structures"]
readme = "README.md"
rust-version = "1.70"

[lib]
name = "jsonatapy"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
chrono = "0.4"
num-traits = "0.2"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[[bench]]
name = "benchmark"
harness = false

[package.metadata.maturin]
python-source = "python"
module-name = "jsonatapy._jsonatapy"
