[package]
name = "jsonatapy"
version = "2.1.0"
edition = "2021"
authors = ["txjmb <txjmb@users.noreply.github.com>"]
description = "High-performance Python/Rust implementation of JSONata query and transformation language"
license = "MIT"
repository = "https://github.com/yourusername/jsonatapy"
homepage = "https://github.com/yourusername/jsonatapy"
documentation = "https://docs.rs/jsonatapy"
keywords = ["jsonata", "json", "query", "transform", "python"]
categories = ["parsing", "data-structures"]
readme = "README.md"
rust-version = "1.70"

[lib]
name = "jsonatapy"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1.0"
regex = "1.10"
chrono = "0.4"
num-traits = "0.2"
base64 = "0.22"
indexmap = "2.2"
percent-encoding = "2.3"
rand = "0.8"
simd-json = { version = "0.14", optional = true }

[features]
default = ["simd", "python"]
simd = ["dep:simd-json"]
python = ["dep:pyo3"]

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "evaluator_bench"
harness = false

[profile.bench]
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[package.metadata.maturin]
python-source = "python"
module-name = "jsonatapy._jsonatapy"
