[package]
name = "jsonata-core"
version = "2.1.2"
edition = "2021"
authors = ["txjmb <txjmb@users.noreply.github.com>"]
description = "High-performance Rust implementation of JSONata query and transformation language"
license = "MIT"
repository = "https://github.com/txjmb/jsonata-core"
homepage = "https://github.com/txjmb/jsonata-core"
documentation = "https://docs.rs/jsonata-core"
keywords = ["jsonata", "json", "query", "transform"]
categories = ["parsing", "data-structures"]
readme = "README.md"
rust-version = "1.70"
exclude = [
    "tests/jsonata-js/*",
    "tests/python/*",
    "python/*",
    "benchmarks/*",
    "docs/*",
    ".github/*",
    "dist-mac/*",
    "node_modules/*",
    "scripts/*",
    ".claude/*",
    "examples/*.py",
    "*.png",
    "mkdocs.yml",
    "CLAUDE.MD",
    "pyproject.toml",
    "uv.lock",
    "rustup-init.exe",
]

[lib]
name = "jsonata_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1.0"
regex = "1.10"
chrono = "0.4"
num-traits = "0.2"
base64 = "0.22"
indexmap = "2.2"
percent-encoding = "2.3"
rand = "0.8"
simd-json = { version = "0.14", optional = true }

[features]
default = ["simd"]
simd = ["dep:simd-json"]
python = ["dep:pyo3"]

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "evaluator_bench"
harness = false

[profile.bench]
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[package.metadata.maturin]
python-source = "python"
module-name = "jsonatapy._jsonatapy"
